--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,13 @@ services:
       - ./hadoop-hive.env
     ports:
       - "50070:50070"
+      - "8020:8020"
 
-  datanode:
+  datanode1:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
-    container_name: datanode
+    container_name: datanode1
     volumes:
-      - ./hdfs/datanode:/hadoop/dfs/data
+      - ./hdfs/datanode1:/hadoop/dfs/data
     env_file:
       - ./hadoop-hive.env
     environment:
@@ -26,6 +27,34 @@ services:
       - namenode
     ports:
       - "50075:50075"
+
+  datanode2:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    container_name: datanode2
+    volumes:
+      - ./hdfs/datanode2:/hadoop/dfs/data
+    env_file:
+      - ./hadoop-hive.env
+    environment:
+      SERVICE_PRECONDITION: "namenode:50070"
+    depends_on:
+      - namenode
+    ports:
+      - "50076:50075"
+
+  datanode3:
+    image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
+    container_name: datanode3
+    volumes:
+      - ./hdfs/datanode3:/hadoop/dfs/data
+    env_file:
+      - ./hadoop-hive.env
+    environment:
+      SERVICE_PRECONDITION: "namenode:50070"
+    depends_on:
+      - namenode
+    ports:
+      - "50077:50075"
 
   hive-server:
     image: bde2020/hive:2.3.2-postgresql-metastore
@@ -41,7 +70,6 @@ services:
       - hive-metastore
     ports:
       - "10000:10000"
-      - "8020:8020"
       - "3022:22"
 
   hive-metastore:
@@ -51,7 +79,7 @@ services:
       - ./hadoop-hive.env
     command: /opt/hive/bin/hive --service metastore
     environment:
-      SERVICE_PRECONDITION: "namenode:50070 datanode:50075 hive-metastore-postgresql:5432"
+      SERVICE_PRECONDITION: "namenode:50070 datanode1:50075 datanode2:50075 datanode3:50075 hive-metastore-postgresql:5432"
     depends_on:
       - hive-metastore-postgresql
     ports:
@@ -63,4 +91,6 @@ services:
     volumes:
       - ./metastore-postgresql/postgresql/data:/var/lib/postgresql/data
     depends_on:
-      - datanode
+      - datanode1
+      - datanode2
+      - datanode3
